# Pyroeffect

./: CMakeLists.txt
Software/Pyroeffect/: .cproject  .mxproject  .project  Pyroeffect Debug.launch  Pyroeffect.ioc
Software/Pyroeffect/Core/Inc/: max6675.h
Software/Pyroeffect/Core/Src/: gpio.c  main.c  max6675.c  spi.c  usart.c
Software/Pyroeffect/Debug/: Pyroeffect.elf  Pyroeffect.list  Pyroeffect.map  makefile  objects.list
Software/Pyroeffect/Debug/Core/Src/: eth.d  gpio.d  main.cyclo  main.d  main.su  max6675.cyclo  max6675.d  max6675.su  spi.cyclo  spi.d  spi.su  subdir.mk  usart.d  usb_otg.d
Software/Pyroeffect/Debug/Drivers/STM32F7xx_HAL_Driver/Src/: subdir.mk
max6675/file/: temperature.txt
max6675/src/: HAL_SPI_Received.c  HAL_SPI_Received.h  Max6675_Temperature.c  Max6675_Temperature.h  delete_data_from_file.c  delete_data_from_file.h  main.c  max6675.c  max6675.h  receiving_data_max6675.c  receiving_data_max6675.h  write_to_file.c  write_to_file.h
max6675/test/: test_HAL_SPI_Received.c  test_Max6675_Temperature.c  test_delete_data_from_file.c  test_max6675.c  test_receiving_data_max6675.c  test_write_to_file.c
Приложение/Pyroeffect/: Pyroeffect.sln
Приложение/Pyroeffect/Pyroeffect/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Pyroeffect.csproj
Приложение/Pyroeffect/Pyroeffect/Properties/: AssemblyInfo.cs  Resources.Designer.cs  Settings.Designer.cs
